Revision history for Perl extension Inline::CPP.

0.79
  - Whitespace cleanup in POD.
  - support Perl 5.8.1
  - show how to use typemaps - fix #36
  - doc tweak - fix #46
  - Better handling of PRD <1.90 - fix #47
  - just use EU::CppG, not roll own
  - make I::CPP data structure right for I::C::info - fix #45

0.75 2018-09-18
  - Fix info (print_info) to call super. (https://github.com/daoswald/Inline-CPP/issues/40)

0.74 2015-09-10
  - Require ExtUtils::CppGuess v0.11 or newer.

0.73 2015-08-08
  - Better handling of spaces in filenames.

0.72 2015-08-04
  - Tweak compiler selection on some systems.

0.71 2015-01-16
  - Get more info out of eval falure.
  - Be more idiomatic in checking class of object.

0.70 2014-12-25
  - Make t/grammar/00pod_coverage.t author-only.

0.69 2014-12-11
  - Moved CPP/Grammar.pm to CPP/Parser/RecDescent.pm to facilitate 'using'
    option for pluggable parsers (INGY++).

0.68 2014-10-25
  - Found one more namespace test in need of relaxation.

0.67 2014-10-24
  - Relax namespace tests with respect to ref returning Foo or main::Foo.
    The distinction is unimportant, and different Perls act differently.

0.66 2014-10-24
  - Package identifiers may be single character.

0.65 2014-10-23
  - Identifiers may start with _ (Pre-5.120 regression in 0.64).

0.64 2014-10-23
  - Fix GH Issue #24: Downgrade gracefully if \p{XID_Start} and
    \p{XID_Continue} aren't available (pre-Perl 5.120).

0.63 2014-09-13
  - Merge pull request from William N. Braswell, Jr, fixing inheritance
    for 'classes' config option.  (PR6 - wbraswell).

0.62 2014-08-21
  - Merge pull request from William N. Braswell, Jr. fixing a problem with
    'classes' config option.
    Problem is documented: https://github.com/daoswald/Inline-CPP/issues/18
    Pull request: https://github.com/daoswald/Inline-CPP/pull/20
  - Fix typos and spelling errors in POD (Suggested by wbraswell)
    (Typo in copyright year for Neil, misspelling in CONTRIBUTING section.)
